--- a/src/app/tos/page.mdx
+++ b/src/app/tos/page.mdx
@@ -48,7 +48,7 @@ When you sign in using Google:
 
 ## 5. Data and Privacy
 
-We value your privacy. You can read our [Privacy Policy](/privacy-policy) to understand how we collect, use, and protect your information.
+We value your privacy. You can read our [Privacy Policy](/privacy) to understand how we collect, use, and protect your information.
 
 We do **not** sell your data or use it to train AI models (this is subject to change, but will always require explicit user consent).
 
