fix: update contact email in Privacy Policy and Terms of Service; update footer mail link

--- a/src/app/tos/page.mdx
+++ b/src/app/tos/page.mdx
@@ -95,7 +95,7 @@ If we make significant changes, we’ll notify you via email or in-app.
 ## 11. Contact Us
 
 If you have questions, concerns, or feedback about these Terms, reach out to us:  
-**support@tymli.org**
+**jeepedia.in@gmail.com**
 
 ---
 
