--- a/src/app/privacy/page.mdx
+++ b/src/app/privacy/page.mdx
@@ -84,4 +84,4 @@ Major changes will be communicated via email or in-app notifications.
 ## 7. Contact Us
 
 For questions, suggestions, or to request data deletion, please contact:  
-**support@tymli.org**
+**jeepedia.in@gmail.com**
